--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.6.3",
